--- a/without cdn/package.json
+++ b/without cdn/package.json
@@ -9,7 +9,9 @@
   "author": "nill jmishra",
   "type": "commonjs",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "parcel index.html",
+    "build": "parcel build index.html"
   },
   "devDependencies": {
     "parcel": "^2.15.4"
