--- a/food app/package.json
+++ b/food app/package.json
@@ -13,7 +13,8 @@
   "type": "commonjs",
   "dependencies": {
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.7.1"
   },
   "devDependencies": {
     "parcel": "^2.15.4"
