--- a/food app/package.json
+++ b/food app/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.7.1"
+    "react-router": "^7.7.1",
+    "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
     "parcel": "^2.15.4"
