--- a/food app/package.json
+++ b/food app/package.json
@@ -12,12 +12,12 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router": "^7.7.1",
     "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
-    "parcel": "^2.15.4"
+    "@parcel/transformer-react-refresh-wrap": "^2.15.4"
   }
 }
