--- a/food app/package.json
+++ b/food app/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "parcel index.html",
     "build": "parcel build index.html"
   },
@@ -12,14 +12,25 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.7.1",
     "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
+    "@babel/preset-react": "^7.27.1",
     "@parcel/transformer-js": "^2.15.4",
     "@parcel/transformer-react-refresh-wrap": "^2.15.4",
+    "@testing-library/jest-dom": "^6.6.4",
+    "@testing-library/react": "^16.3.0",
+    "babel-jest": "^30.0.5",
+    "jest": "^30.0.5",
+    "jest-environment-jsdom": "^30.0.5",
     "parcel": "^2.15.4"
   }
 }
